--- a/telas-login/login.html
+++ b/telas-login/login.html
@@ -24,7 +24,7 @@
   <main class="bg-white p-8 md:p-10 rounded-2xl shadow-lg w-full max-w-md mx-4">
       
     <div class="flex justify-center mb-6">
-      <img src="/logounieuro.png" alt="" class="h-28 w-28 object-cover">
+      <img src="/telas-login/logounieuro.png" alt="" class="h-28 w-28 object-cover">
     </div>
 
     <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">
